<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:padding="16dp"
    tools:context=".tabFragment.home.tabs.Fragment_WhoWeAre_IRPOF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/IRPOF_Title"
            android:textColor="#0a4484"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="16dp"
            android:text="@string/irpof_para"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingTop="16dp"
            android:text="@string/irpof_para_2"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
